--- a/readme.rmd
+++ b/readme.rmd
@@ -35,6 +35,19 @@ get_url <- function(x) {
 
 }
 
+get_X_Y_coordinates <- function(s) {
+  
+  sftype <- unique(as.character(sf::st_geometry_type(s)))
+
+  if(sftype == "POINT") {
+    s  <- s %>% 
+          sf::st_coordinates() %>% 
+          as.data.frame() %>%
+          bind_cols(s, .)
+      } else {
+    s
+      }
+}
 
 sf_fisbroker <- function(x) {
   
@@ -43,8 +56,9 @@ sf_fisbroker <- function(x) {
   s <- sf::read_sf(url)
   sf::st_crs(s) <- 25833
   s <- sf::st_transform(s, 4326)
+  s <- get_X_Y_coordinates(s)
   s
-  
+
 }
 
 export_format <- c(
@@ -67,7 +81,7 @@ sf_save <- function(z, fname) {
 
 # Description
 
-This repository is a proof-of-concept how to convert WFS data into diffent output formats using "Simple Features" [https://github.com/r-spatial/sf](https://github.com/r-spatial/sf)
+This repository is a proof-of-concept how to convert WFS data into different output formats using "Simple Features" [https://github.com/r-spatial/sf](https://github.com/r-spatial/sf)
 
 ## Gebäudealter der Wohnbebauung 2015
 
@@ -113,9 +127,6 @@ sf_save(z, "Tempolimit")
 z <- sf_fisbroker("s_wohnlagenadr2017")
 
 z  <- z %>% 
-       sf::st_coordinates() %>% 
-       as.data.frame() %>%
-       bind_cols(z, .) %>%
        mutate(ADR_num = as.numeric(stringr::str_extract(ADR, "[0-9]+")), 
               ADR_chr = stringr::str_extract(ADR, "[aA-zZ]+"))
 
