Avoid pipe in function

--- a/readme.rmd
+++ b/readme.rmd
@@ -40,13 +40,14 @@ get_X_Y_coordinates <- function(s) {
   sftype <- unique(as.character(sf::st_geometry_type(s)))
 
   if(sftype == "POINT") {
-    s  <- s %>% 
-          sf::st_coordinates() %>% 
-          as.data.frame() %>%
-          bind_cols(s, .)
-      } else {
+    
+    xy <- as.data.frame(sf::st_coordinates(s))
+    dplyr::bind_cols(s, xy)
+    
+  } else {
     s
-      }
+  }
+  
 }
 
 sf_fisbroker <- function(x) {
@@ -154,7 +155,7 @@ Data set used in the blog post from [lxndrkp](https://twitter.com/lxndrkp):
 
 [HOW TO: Downloading data from Berlin's geospatial data portal](https://lab.technologiestiftung-berlin.de/projects/fisbroker-to-qgis/index_en.html)
 
-Note: Although the data is published as Open Data I exclude some sensible information in the export.
+Note: Although the data is published as Open Data I exclude some sensitive data in the export.
 
 
 ```{r eval = TRUE}
